feat(hypr, nixos)!: ags integration, brave, special keys, blur

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -23,6 +23,7 @@ language-servers = ["typescript-language-server", "tailwindcss-ls", "gpt"]
 name = "typescript"
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
 auto-format = true
+indent = { tab-width = 4, unit = "  " }
 language-servers = ["typescript-language-server", "gpt"]
 
 [[language]]
