--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -17,7 +17,6 @@ bind = ALTSHIFT,C,exec,$terminal hx ~/.config
 bind = SUPERCONTROL,N,exec,[float]$terminal sudo nixos-rebuild switch --flake ~/.nixos
 bind = SUPERALT, T, exec, systemctl restart systemd-timesyncd
 
-bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
 bind = SUPERALT,COMMA,exec,$vaultPersistent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
@@ -31,3 +30,7 @@ bind = SUPER,C,exec,eww open date --toggle
 bind = SUPER,M,exec,eww open music --toggle
 bind = SUPERALT,Q,exec,eww close-all
 bind = SUPERSHIFT,Q,exec,eww open powermenu --toggle
+
+bind = SUPER ALT, R,  exec, ags -q; ags
+bind = SUPER,D,exec,$launcher
+
