--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -7,16 +7,15 @@
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 
-# windowrule = pseudo,title:Zoom
-windowrule = float, zoom
-
 windowrule = float,title:^(Picture-in-Picture)$
-windowrule = float,title:^(Firefox Developer Edition — Sharing Indicator)$
 windowrule = move 1850 55, title:^(Firefox Developer Edition — Sharing Indicator)$
-windowrule = rounding 0,title:^(Firefox Developer Edition — Sharing Indicator)$
-windowrule = noblur,^(firefoxdeveloperedition)$
-windowrule = opaque,^(firefoxdeveloperedition)$
 # windowrule = idleinhibit fullscreen,firefox
+
+windowrule = noblur,^()$
+windowrule = opaque,^()$
+windowrule = noshadow,^()$
+windowrule = noblur,^(brave-browser)$
+windowrule = opaque,^(brave-browser)$
 
 windowrule = idleinhibit focus,mpv
 # windowrule = fullscreen,mpv
@@ -25,9 +24,8 @@ windowrule = float,org.gnome.Calculator
 windowrule = float,title:Reminder
 windowrule = float,title:About*
 windowrule = float,class:org.kde.kdeconnect.daemon
+windowrule = rounding 0,title:win* # Android Studio popup
 
 windowrule = rounding 50,swayosd
 windowrule = size 50% 60%,kitty
 windowrule = center,kitty
-
-# windowrulev2 = forcergbx, class:firefox-aurora
