--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,12 +7,11 @@ source = ~/.config/hypr/hyprland/windowBinds.conf
 source = ~/.config/hypr/hyprland/userBinds.conf
 source = ~/.config/hypr/hyprland/autostart.conf
 
-monitor = eDP-1,1920x1080@60,0x0,1,mirror,DP-2
-#monitor = ,preferred,auto,1
+#monitor = eDP-1,1920x1080@60,0x0,1,mirror,DP-2
+monitor = ,preferred,auto,1,mirror,
 
 # Blur LayerSurfaces
 # blurls=waybar
 # blurls=lockscreen
-# blurls=gtk-layer-shell
-# blurls=eww-blur
+# blurls=applauncher
 
