--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -29,15 +29,15 @@ general {
 decoration {
     rounding = 10
     blur {
-        enabled = false
+        enabled = true
         size = 3 # minimum 1
         passes = 3 # minimum 1, more passes = more resource intensive.
         # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
         # if you want heavy blur, you need to up the blur_passes.
         # the more passes, the more you can up the blur_size without noticing artifacts.
     }
-    # active_opacity = 0.95
-    # inactive_opacity = 0.95
+    active_opacity = 0.95
+    inactive_opacity = 0.95
 }
 
 animations {
@@ -65,7 +65,7 @@ animations {
 }
 
 dwindle {
-    pseudotile = false # enable pseudotiling on dwindle
+    smart_split = true
 }
 
 gestures {
@@ -77,17 +77,20 @@ gestures {
 }
 
 misc {
-     vfr = true
      vrr = 1
      mouse_move_enables_dpms = false
      enable_swallow = true
-     # swallow_regex = ^(wezterm)$
+     swallow_regex = org.wezfurlong.wezterm
      # disable_hyprland_logo = true
      force_default_wallpaper = 0
+     new_window_takes_over_fullscreen = 1
+     animate_mouse_windowdragging = true
+     animate_manual_resizes = true
 }
 
 binds {
       workspace_back_and_forth = true
+      allow_workspace_cycles = true
 }
 
 debug {
