chore(hypr): remove eww binds, new ags binds

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -7,9 +7,10 @@ bind = SUPERSHIFT,F,exec,nautilus
 bind = SUPERSHIFT,O,exec,obsidian
 bind = SUPERSHIFT,Z,exec,zotero
 bind = SUPERSHIFT,C,exec,gnome-calculator
-bind = SUPERSHIFT,S,exec,gnome-control-center
+bind = SuperShift, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = SUPERSHIFT,V,exec,code
 bind = SUPERSHIFT,H,exec,$terminal hx
+bind = Control+Shift, Escape, exec, missioncenter
 
 bind = ALTSHIFT,N,exec,$terminal hx ~/.nixos
 bind = ALTSHIFT,C,exec,$terminal hx ~/.config
@@ -24,13 +25,26 @@ bind = SUPER,PERIOD,exec,$games
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
 bind = SUPERSHIFT, P, exec, hyprpicker -a -n
-bind = SUPER, N, exec, dunstctl history-pop
-
-bind = SUPER,C,exec,eww open date --toggle
-bind = SUPER,M,exec,eww open music --toggle
-bind = SUPERALT,Q,exec,eww close-all
-bind = SUPERSHIFT,Q,exec,eww open powermenu --toggle
 
 bind = SUPER ALT, R,  exec, ags -q; ags
 bind = SUPER,D,exec,$launcher
 
+bindr = Control+Super, R, exec, killall ags ydotool; ags &
+bindr = Control+Super+Alt, R, exec, hyprctl reload; killall ags ydotool; ags &
+bind = Control+Super, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh
+bind = Control+Alt, Slash, exec, ags run-js 'cycleMode();'
+bindir = Super, Super_L, exec, ags -t 'overview'
+bind = Super, Tab, exec, ags -t 'overview'
+bind = Super, Slash, exec, ags -t 'cheatsheet'
+bind = Super, O, exec, ags -t 'sideleft'
+bind = Super, N, exec, ags -t 'sideright'
+bind = Super, M, exec, ags run-js 'openMusicControls.value = (!mpris.getPlayer() ? false : !openMusicControls.value);'
+bind = SuperAlt, Comma, exec, ags run-js 'openColorScheme.value = true; Utils.timeout(2000, () => openColorScheme.value = false);'
+bind = Super, K, exec, ags -t 'osk'
+bind = Control+Alt, Delete, exec, ags -t 'session'
+bindle = , XF86AudioRaiseVolume, exec, ags run-js 'indicator.popup(1);'
+bindle = , XF86AudioLowerVolume, exec, ags run-js 'indicator.popup(1);'
+bindle=, XF86MonBrightnessUp, exec, ags run-js 'brightness.screen_value += 0.05; indicator.popup(1);'
+bindle=, XF86MonBrightnessDown, exec, ags run-js 'brightness.screen_value -= 0.05; indicator.popup(1);'
+bindl  = , XF86AudioMute, exec, ags run-js 'indicator.popup(1);'
+bindl  = Super+Shift,M,   exec, ags run-js 'indicator.popup(1);'
