feat(hypr)!: more hypr ecosystem, ags & clipse

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,5 +1,5 @@
 bind = SUPER,return,exec,wezterm
-bind = SUPERSHIFT,return,exec,[float]wezterm
+bind = SUPERSHIFT,return,exec,$terminal --class floating
 bind = SUPERSHIFT,B,exec,brave
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
@@ -23,11 +23,11 @@ bind = SUPERALT,COMMA,exec,$vaultPersistent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
 bind = ALT,V,exec,$clipboard
-bind = CTRLALT,L,exec,$lock
+bind = CTRLALT,L,exec,hyprlock
 bind = SUPERSHIFT, P, exec, hyprpicker -a -n
 
 bind = SUPER ALT, R,  exec, ags -q; ags
-bind = SUPER,D,exec,$launcher
+bind=super,v,exec,$terminal --class floating clipse
 
 bindr = Control+Super, R, exec, killall ags ydotool; ags &
 bindr = Control+Super+Alt, R, exec, hyprctl reload; killall ags ydotool; ags &
@@ -48,3 +48,5 @@ bindle=, XF86MonBrightnessUp, exec, ags run-js 'brightness.screen_value += 0.05;
 bindle=, XF86MonBrightnessDown, exec, ags run-js 'brightness.screen_value -= 0.05; indicator.popup(1);'
 bindl  = , XF86AudioMute, exec, ags run-js 'indicator.popup(1);'
 bindl  = Super+Shift,M,   exec, ags run-js 'indicator.popup(1);'
+
+windowrulev2 = float,class:floating
