--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -1,6 +1,4 @@
-$modules-hypr = $HOME/.config/hypr/scripts
-$modules-eww = $HOME/.config/eww/scripts
-$lock = swaylock -f -i ~/Pictures/Wallpapers/wallhaven-y8e1gl.jpg
+# $lock = swaylock -f -i ~/Pictures/Wallpapers/wallhaven-y8e1gl.jpg
 $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $vaultPersistent = encfs --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $games = udisksctl mount --block-device /dev/nvme0n1p4
@@ -9,4 +7,11 @@ $screenOn = hyprctl dispatch dpms on
 # $launcher = killall rofi || rofi -show drun -theme ~/.config/rofi/launcher.rasi
 $launcher = ags -t "applauncher"
 $clipboard = cliphist list | rofi -dmenu -theme ~/.config/rofi/launcher.rasi | cliphist decode | wl-copy
-$terminal = wezterm start --
+$terminal = wezterm start 
+
+# Fix hyprpicker segfault
+env = XCURSOR_THEME=Bibata-Modern-Classic # Not working :(
+env = XCURSOR_SIZE,20
+env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
+env = HYPRCURSOR_SIZE,20
+env = CURSOR_PATH=${XCURSOR_PATH}:~/.local/share/icons
