--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -14,6 +14,7 @@ windowrule = move 1850 55, title:^(Firefox Developer Edition — Sharing Indicat
 windowrule = noblur,^()$
 windowrule = opaque,^()$
 windowrule = noshadow,^()$
+windowrule = rounding 0,^(jetbrains-studio)$
 windowrule = noblur,^(brave-browser)$
 windowrule = opaque,^(brave-browser)$
 
