--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,13 +1,13 @@
-$text_color = rgba(e1e3e4FF)
-$entry_background_color = rgba(0F101111)
-$entry_border_color = rgba(89929555)
-$entry_color = rgba(bfc8cbFF)
-$font_family = Gabarito
-$font_family_clock = Gabarito
+$text_color = rgba({{ $onBackground }}FF)
+$entry_background_color = rgba({{ $background }}11)
+$entry_border_color = rgba({{ $outline }}55)
+$entry_color = rgba({{ $onSurfaceVariant }}FF)
+$font_family = Iosevka
+$font_family_clock = Iosevka
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba(0F101177)
+    color = rgba({{ $background }}77)
     # path = {{ SWWW_WALL }}
     path = screenshot
     blur_size = 5
@@ -16,13 +16,13 @@ background {
 input-field {
     monitor =
     size = 250, 50
-    outline_thickness = 2
+    outline_thickness = 0
     dots_size = 0.1
     dots_spacing = 0.3
     outer_color = $entry_border_color
     inner_color = $entry_background_color
     font_color = $entry_color
-    # fade_on_empty = true
+    fade_on_empty = true
 
     position = 0, 20
     halign = center
@@ -31,7 +31,7 @@ input-field {
 
 label { # Clock
     monitor =
-    text = $TIME
+    text = cmd[update:1000] date '+%I:%M %p'
     color = $text_color
     font_size = 65
     font_family = $font_family_clock
@@ -40,9 +40,9 @@ label { # Clock
     halign = center
     valign = center
 }
-label { # Greeting
+label { # Day
     monitor =
-    text = hi $USER !!!
+    text = cmd[update:0] date +%A
     color = $text_color
     font_size = 20
     font_family = $font_family
@@ -64,7 +64,7 @@ label { # lock icon
 }
 label { # "locked" text
     monitor =
-    text = locked
+    text = Locked
     color = $text_color
     font_size = 14
     font_family = $font_family
