--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -2,14 +2,12 @@ exec-once = systemctl --user start polkit-gnome-authentication-agent-1.service
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ags
-exec-once = swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep '$lock'
-# exec-once = wlsunset -S 6:00 -s 18:00 -d 2500
-exec-once = gammastep -l 22.6:88.4
+# exec-once = swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep '$lock'
+exec-once = wlsunset -S 6:00 -s 18:00 -d 2500
+# exec-once = gammastep -l 22.6:88.4
 exec-once = wl-paste --watch cliphist store --max-items=20
 # exec-once = clipman restore
-exec-once = eww daemon
 exec-once = sleep 1; swww init
-exec-once = swayosd
 exec-once = $modules-hypr/battery-notification.sh
-exec-once = nm-applet --indicator
-exec-once = swayosd-server
+exec-once = clipse -listen
+exec-once = hypridle
