--- a/.config/hypr/hyprland/colors.conf
+++ b/.config/hypr/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c cde7eeBB -b 334a5044 -s 00000000'
+# exec = export SLURP_ARGS='-d -c {{ $onSecondaryContainer }}BB -b {{ $secondaryContainer }}44 -s 00000000'
 
 general {
-    col.active_border = rgba(e1e3e439)
-    col.inactive_border = rgba(89929530)
+    col.active_border = rgba({{ $onSurface }}39)
+    col.inactive_border = rgba({{ $outline }}30)
 }
 
 misc {
-    background_color = rgba(191c1dFF)
+    background_color = rgba({{ $surface }}FF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0F1011FF)
-        col.text = rgba(e1e3e4FF)
+        bar_color = rgba({{ $background }}FF)
+        col.text = rgba({{ $onBackground }}FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e1e3e4), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e1e3e4), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e1e3e4), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(53d7f1AA) rgba(53d7f177),pinned:1
+windowrulev2 = bordercolor rgba({{ $primary }}AA) rgba({{ $primary }}77),pinned:1
