feat(hypr): hyprlock

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,27 +1,31 @@
-$text_color = rgba({{ $onBackground }}FF)
-$entry_background_color = rgba({{ $background }}11)
-$entry_border_color = rgba({{ $outline }}55)
-$entry_color = rgba({{ $onSurfaceVariant }}FF)
+$text_color = rgba(D8E5E8FF)
+$entry_background_color = rgba(09151811)
+$entry_border_color = rgba(83949855)
+$entry_color = rgba(B9C9CEFF)
 $font_family = Iosevka
 $font_family_clock = Iosevka
 $font_material_symbols = Material Symbols Rounded
+$wallpaper = /home/han/Pictures/Wallpapers/wallhaven-k95ee7.png
 
 background {
-    color = rgba({{ $background }}77)
-    # path = {{ SWWW_WALL }}
-    path = screenshot
-    blur_size = 5
-    blur_passes = 4
+    color = rgba(09151877)
+    path = $wallpaper
+    # path = screenshot
+    blur_size = 3
+    blur_passes = 3
+    noise = 0.03
+    brightness = 0.3
 }
 input-field {
     monitor =
     size = 250, 50
-    outline_thickness = 0
+    outline_thickness = 2
     dots_size = 0.1
     dots_spacing = 0.3
     outer_color = $entry_border_color
     inner_color = $entry_background_color
     font_color = $entry_color
+    fail_text = <span foreground='##bfbdb6'>$FAIL <b>($ATTEMPTS)</b></span>
     fade_on_empty = true
 
     position = 0, 20
