--- a/.config/hypr/hyprland/specialKeys.conf
+++ b/.config/hypr/hyprland/specialKeys.conf
@@ -1,13 +1,18 @@
 bindle = ,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindle = ,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindle = ,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindle = , XF86AudioRaiseVolume, exec, ags run-js 'indicator.popup(1);'
+bindle = , XF86AudioLowerVolume, exec, ags run-js 'indicator.popup(1);'
+
+bindle = ,XF86MonBrightnessUp,exec,brightnessctl s "$(brightnessctl g | awk '{ print int(($1 + .72) * 1.4) }')"
+bindle = ,XF86MonBrightnessDown,exec,brightnessctl s "$(brightnessctl g | awk '{ print int($1 / 1.4) }')"
+# bindle=, XF86MonBrightnessUp, exec, ags run-js 'brightness.screen_value += 0.25; indicator.popup(1);'
+# bindle=, XF86MonBrightnessDown, exec, ags run-js 'brightness.screen_value -= 0.25; indicator.popup(1);'
+bindl  = , XF86AudioMute, exec, ags run-js 'indicator.popup(1);'
 
 bindle = ,XF86AudioPlay,exec,playerctl play-pause
 bindle = ,XF86AudioNext,exec,playerctl next
 bindle = ,XF86AudioPrev,exec,playerctl previous
-
-bindle = ,XF86MonBrightnessUp,exec,brightnessctl s "$(brightnessctl g | awk '{ print int(($1 + .72) * 1.4) }')"
-bindle = ,XF86MonBrightnessDown,exec,brightnessctl s "$(brightnessctl g | awk '{ print int($1 / 1.4) }')"
 
 bind = ,PRINT,exec,grimshot --notify copy output
 bind = SUPER,PRINT,exec,grimshot --notify save output
