--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
 bind = SUPER,return,exec,wezterm
 bind = SUPERSHIFT,return,exec,$terminal --class floating
-bind = SUPERSHIFT,B,exec,brave
+bind = SUPERSHIFT,B,exec,brave --ozone-platform-hint=auto --enable-features=TouchpadOverscrollHistoryNavigation --gtk-version=4
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
@@ -24,7 +24,7 @@ bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,hyprlock
-bind = SUPERSHIFT, P, exec, hyprpicker -a -n
+bind = SUPERSHIFT, P, exec,XCURSOR_THEME=Bibata-Modern-Classic hyprpicker -a -n
 
 bind = SUPER ALT, R,  exec, ags -q; ags
 bind=super,v,exec,$terminal --class floating clipse
@@ -42,11 +42,5 @@ bind = Super, M, exec, ags run-js 'openMusicControls.value = (!mpris.getPlayer()
 bind = SuperAlt, Comma, exec, ags run-js 'openColorScheme.value = true; Utils.timeout(2000, () => openColorScheme.value = false);'
 bind = Super, K, exec, ags -t 'osk'
 bind = Control+Alt, Delete, exec, ags -t 'session'
-bindle = , XF86AudioRaiseVolume, exec, ags run-js 'indicator.popup(1);'
-bindle = , XF86AudioLowerVolume, exec, ags run-js 'indicator.popup(1);'
-bindle=, XF86MonBrightnessUp, exec, ags run-js 'brightness.screen_value += 0.05; indicator.popup(1);'
-bindle=, XF86MonBrightnessDown, exec, ags run-js 'brightness.screen_value -= 0.05; indicator.popup(1);'
-bindl  = , XF86AudioMute, exec, ags run-js 'indicator.popup(1);'
 bindl  = Super+Shift,M,   exec, ags run-js 'indicator.popup(1);'
 
-windowrulev2 = float,class:floating
