--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -10,7 +10,7 @@ $clipboard = cliphist list | rofi -dmenu -theme ~/.config/rofi/launcher.rasi | c
 $terminal = wezterm start 
 
 # Fix hyprpicker segfault
-env = XCURSOR_THEME=Bibata-Modern-Classic # Not working :(
+env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,20
 env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
 env = HYPRCURSOR_SIZE,20
