--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -30,3 +30,4 @@ windowrule = rounding 0,title:win* # Android Studio popup
 windowrule = rounding 50,swayosd
 windowrule = size 50% 60%,kitty
 windowrule = center,kitty
+windowrulev2 = float,class:floating
