--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,9 +3,9 @@ $entry_background_color = rgba(09151811)
 $entry_border_color = rgba(83949855)
 $entry_color = rgba(B9C9CEFF)
 $font_family = Iosevka
-$font_family_clock = Iosevka
+$font_family_clock = Space Grotesk
 $font_material_symbols = Material Symbols Rounded
-$wallpaper = /home/han/Pictures/Wallpapers/wallhaven-k95ee7.png
+$wallpaper = /home/han/Pictures/Wallpapers/current/wallhaven-1pw769.png
 
 background {
     color = rgba(09151877)
@@ -14,7 +14,7 @@ background {
     blur_size = 3
     blur_passes = 3
     noise = 0.03
-    brightness = 0.3
+    brightness = 0.5
 }
 input-field {
     monitor =
@@ -36,6 +36,8 @@ input-field {
 label { # Clock
     monitor =
     text = cmd[update:1000] date '+%I:%M %p'
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 65
     font_family = $font_family_clock
@@ -47,6 +49,8 @@ label { # Clock
 label { # Day
     monitor =
     text = cmd[update:0] date +%A
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 20
     font_family = $font_family
@@ -58,6 +62,8 @@ label { # Day
 label { # lock icon
     monitor =
     text = lock
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 21
     font_family = $font_material_symbols
@@ -69,6 +75,8 @@ label { # lock icon
 label { # "locked" text
     monitor =
     text = Locked
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 14
     font_family = $font_family
@@ -81,9 +89,11 @@ label { # "locked" text
 label { # Status
     monitor =
     text = cmd[update:5000] ~/.config/hypr/hyprlock/status.sh
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 14
-    font_family = $font_family
+    font_family = $font_family_clock
 
     position = 30, -30
     halign = left
