--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ source = ~/.config/hypr/hyprland/autostart.conf
 
 #monitor = eDP-1,1920x1080@60,0x0,1,mirror,DP-2
 monitor = ,preferred,auto,1,mirror,
+# monitor=eDP-1,1920x1080@60,0x0,1,transform,3
 
 # Blur LayerSurfaces
 # blurls=waybar
