--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -24,6 +24,8 @@ general {
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
     cursor_inactive_timeout = 0
+
+    allow_tearing = true
 }
 
 decoration {
@@ -32,6 +34,8 @@ decoration {
         enabled = false
         size = 3 # minimum 1
         passes = 3 # minimum 1, more passes = more resource intensive.
+        noise = 0.03
+        vibrancy_darkness = 1.0
         # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
         # if you want heavy blur, you need to up the blur_passes.
         # the more passes, the more you can up the blur_size without noticing artifacts.
