chore(hypr): changes before migration

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
 bind = SUPER,return,exec,wezterm
 bind = SUPERSHIFT,return,exec,$terminal --class floating
-bind = SUPERSHIFT,B,exec,brave --ozone-platform-hint=auto --enable-features=TouchpadOverscrollHistoryNavigation --gtk-version=4
+bind = SUPERSHIFT,B,exec,brave --ozone-platform-hint=auto --enable-features=TouchpadOverscrollHistoryNavigation --gtk-version=4 --disable-features=WaylandFractionalScaleV1
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
