--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,21 +1,24 @@
-$text_color = rgba(D8E5E8FF)
-$entry_background_color = rgba(09151811)
-$entry_border_color = rgba(83949855)
-$entry_color = rgba(B9C9CEFF)
-$font_family = Iosevka
-$font_family_clock = Space Grotesk
+# $text_color = rgba(D7E6E0FF)
+# $entry_background_color = rgba(09161311)
+# $entry_border_color = rgba(83958F55)
+# $entry_color = rgba(B8CBC4FF)
+$text_color = rgba(FFFFFFFF)
+$entry_background_color = rgba(33333311)
+$entry_border_color = rgba(3B3B3B55)
+$entry_color = rgba(FFFFFFFF)
+$font_family = Inter
+$font_family_clock = Gabriato
 $font_material_symbols = Material Symbols Rounded
 $wallpaper = /home/han/Pictures/Wallpapers/current/wallhaven-1pw769.png
 
 background {
-    color = rgba(09151877)
+    color = rgba(09161377)
     path = $wallpaper
     # path = screenshot
     blur_size = 3
     blur_passes = 3
-    noise = 0.03
-    brightness = 0.5
 }
+
 input-field {
     monitor =
     size = 250, 50
@@ -46,6 +49,7 @@ label { # Clock
     halign = center
     valign = center
 }
+
 label { # Day
     monitor =
     text = cmd[update:0] date +%A
@@ -59,6 +63,7 @@ label { # Day
     halign = center
     valign = center
 }
+
 label { # lock icon
     monitor =
     text = lock
@@ -72,6 +77,7 @@ label { # lock icon
     halign = center
     valign = bottom
 }
+
 label { # "locked" text
     monitor =
     text = Locked
@@ -81,7 +87,7 @@ label { # "locked" text
     font_size = 14
     font_family = $font_family
 
-    position = 0, 50
+    position = 0, 45
     halign = center
     valign = bottom
 }
