chore(nixos): niri comfy config

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -8,8 +8,9 @@ general {
 
 listener {
     timeout = 300 # 5mins
-    on-timeout = hyprctl dispatch dpms off
-    on-resume = hyprctl dispatch dpms on
+    # on-timeout = hyprctl dispatch dpms off
+    on-timeout = niri msg action power-off-monitors
+    # on-resume = hyprctl dispatch dpms on
 }
 
 listener {
