--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "ayu_neue"
+theme = "ayu_dark"
 
 [editor]
 line-number = "relative"
@@ -26,7 +26,7 @@ character = "▏"
 
 [editor.lsp]
 display-messages = true
-display-inlay-hints = true
+display-inlay-hints = false
 
 [editor.soft-wrap]
 enable = true
