feat(mpv): add vulkan and font Inter

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -54,7 +54,7 @@ force-window=immediate
 
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
-profile=gpu-hq
+profile=high-quality
 
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
@@ -66,8 +66,10 @@ profile=gpu-hq
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
 hwdec=auto
-vo=gpu
-gpu-context=wayland
+vo=gpu-next
+# gpu-context=wayland
+gpu-api=vulkan
+
 ##################
 # audio settings #
 ##################
@@ -126,6 +128,11 @@ slang=en
 # You can also include other configuration files.
 #include=/path/to/the/file/you/want/to/include
 
+sub-font='Inter Display'
+sub-font-size=50
+
+osd-font='Inter Display'
+
 ############
 # Profiles #
 ############
@@ -139,4 +146,4 @@ slang=en
 #sharpen=5
 
 keepaspect=yes
-save-position-on-quit
+save-position-on-quit=yes
