--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,167 +1,229 @@
 {
-    "layer": "top",
-    /* "margin-top": 10, */
-    /* "margin-left": 10, */
-    /* "margin-right": 10, */
-    "spacing": 30,
-    "height": 42,
-
-    "modules-left": [
-        "cpu",
-        "memory",
-        "custom/gpu-usage",
-        "disk",
-        "custom/media",
+  "layer": "top",
+  /* "margin-top": 10, */
+  /* "margin-left": 10, */
+  /* "margin-right": 10, */
+  "spacing": 30,
+  "height": 40,
+  "modules-left": [
+    "cpu",
+    "memory",
+    "custom/gpu-usage",
+    "disk",
+    "custom/spotify",
+  ],
+  "modules-center": [    
+    "niri/workspaces"
+  ],
+  "modules-right": [
+    "tray",
+    "privacy",
+    "temperature",
+    "network",
+    "bluetooth",
+    "wireplumber",
+    "idle_inhibitor",
+    "custom/dunst",
+    "battery",
+    "clock"
+  ],
+  "temperature": {
+    "critical-threshold": 80,
+    "format": " {temperatureC}°C",
+    "tooltip": false,
+  },
+  "backlight": {
+    "format": "{icon}",
+    "format-icons": [
+      "",
+      ""
+    ]
+  },
+  "wireplumber": {
+    "format": "{icon}",
+    "format-muted": " Muted",
+    "on-click": "helvum",
+    "format-icons": [
+      "",
+      "",
+      "",
+      ""
     ],
-    "modules-center": [
+    "states": {
+      "warning": 100,
+    },
+  },
+  "battery": {
+    "interval": 10,
+    "states": {
+      "good": 95,
+      "warning": 20,
+      "critical": 10,
+    },
+    "format": "{icon} {capacity}%",
+    "format-icons": [
+      "",
+      "",
+      "",
+      "",
+      ""
     ],
-    "modules-right": [
-        "tray",
-        "temperature",
-        "network",
-        "bluetooth",
-        "wireplumber",
-        "idle_inhibitor",
-        "battery",
-        "clock"
-    ],
-
-
-    "temperature": {
-        "critical-threshold": 80,
-        "interval": 1,
-        "format": " {temperatureC}°C",
-        "tooltip": false,
-    },
-    "backlight": {
-        "format": "{icon}",
-        "format-icons": ["", ""]
-    },
-    "wireplumber": {
-        "format": "{icon}",
-        "format-muted": " Muted",
-        "on-click": "helvum",
-        "format-icons": ["", "", "", ""],
-        "states": {
-            "warning": 100,
-        },
-    },
-    "battery": {
-        "interval": 10,
-        "states": {
-            "good": 95,
-            "warning": 20,
-            "critical": 10,
-        },
-        "format": "{icon} {capacity}%",
-        "format-icons": ["", "", "", "", ""],
-        "format-full": "{icon} Full",
-        "format-plugged": "{icon} Plugged",
-        "format-charging": " {capacity}%",
-        "tooltip": true
-    },
-    "clock": {
-        "interval": 1,
-        "format": "{:%a %d %b  %I:%M %p}",
-        "on-click": "gnome-calendar"
-    },
-    "memory": {
-        "interval": 2,
-        "format": " {percentage}%",
-        "tooltip-format": "Swap: {swapPercentage}%",
-        "states": {
-            "warning": 90,
-        },
-    },
-    "cpu": {
-        "interval": 2,
-        "format": " {usage}%"
-    },
-    "network": {
-        "format-wifi": "",
-        "format-ethernet": "  {ifname} ({ipaddr})",
-        "format-linked": " {essid}",
-        "format-disconnected": "",
-        // "format-alt": " {ifname} ({ipaddr})",
-        "tooltip": true,
-        "tooltip-format": "{essid} {ipaddr} {ifname}"
-    },
-    "bluetooth": {
-        "format": "",
-        "format-connected": " {device_alias}",
-        "format-connected-battery": " {device_battery_percentage}%",
-        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
-    },
-    "tray": {
-        "icon-size": 15,
-        "spacing": 20,
-    },
-    "mpd": {
-        "format": "{stateIcon} {artist} - {title}",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "interval": 10,
-        "state-icons": {
-            "paused": "",
-            "playing": ""
-        },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
-    },
-    "custom/media": {
-        "format": "{icon}{}",
-        "return-type": "json",
-        "format-icons": {
-            "Playing": "  ",
-            "Paused": "  ",
-            },
-        "max-length": 80,
-        "exec": "playerctl -a metadata --format '{\"text\": \"{{markup_escape(artist)}} - {{markup_escape(title)}}\", \"tooltip\": \"{{album}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-        "on-click": "playerctl play-pause",
-    },
-    "custom/gpu-usage": {
-        "exec": "cat /sys/class/hwmon/hwmon6/device/gpu_busy_percent",
-        "format": " {}%",
-        "return-type": "",
-        "interval": 3
-    },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
-    },
-    "hyprland/workspaces": {
-    	"format": "{icon}",
-    	"format-icons": {
-    		"default": "",
-    	},
-       "persistent-workspaces": {
-             "*": 10, // workspaces by default on every monitor
-       },
-    },
-    "disk": {
-      "format": " {}%",
-      "interval": 60,
-      "path": "/home",
-    },
-    "wlr/workspaces": {
-      "format": "{icon}",
-      "on-click": "activate",
-      "format-icons": {
-        "1": "",
-        "2": "",
-        "3": "",
-        "4": "",
-        "5": "",
-        "urgent": "",
-        "active": "",
-        "default": ""
+    "format-full": "{icon} Full",
+    "format-plugged": "{icon} Plugged",
+    "format-charging": " {capacity}%",
+    "tooltip": true
+  },
+  "clock": {
+    "format": "{:%a %d %b  |  %I:%M %p}",
+    "on-click": "gnome-calendar",
+    "tooltip-format": "<span font='Iosevka' size='large'>{calendar}</span>",
+    "calendar": {
+      "mode"          : "month",
+      "mode-mon-col"  : 3,
+      "format": {
+        "months":     "<span color='#ffead3'><b>{}</b></span>",
+        "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+        "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+        "today":      "<span color='#ff6699'><b>{}</b></span>"
       },
-      "sort-by-number": true
+    },
+    "actions":  {
+      "on-click-right": "mode",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down"
+    },
+  },
+  "memory": {
+    "format": " {percentage}%",
+    "tooltip-format": "Swap: {swapPercentage}%",
+    "states": {
+      "warning": 90,
+    },
+  },
+  "cpu": {
+    "format": " {usage}%"
+  },
+  "network": {
+    "format-wifi": "",
+    "format-ethernet": "  Wired",
+    "format-linked": " {essid}",
+    "format-disconnected": "",
+    // "format-alt": " {ifname} ({ipaddr})",
+    "tooltip": true,
+    "tooltip-format": "{essid} {ipaddr} {ifname}"
+  },
+  "bluetooth": {
+    "format": "",
+    "format-connected": " {device_alias}",
+    "format-connected-battery": " {device_battery_percentage}%",
+    "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+    "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+    "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+    "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
+  },
+  "tray": {
+    "icon-size": 15,
+    "spacing": 20,
+  },
+  "mpd": {
+    "format": "{stateIcon} {artist} - {title}",
+    "format-disconnected": "Disconnected ",
+    "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+    "interval": 10,
+    "state-icons": {
+      "paused": "",
+      "playing": ""
+    },
+    "tooltip-format": "MPD (connected)",
+    "tooltip-format-disconnected": "MPD (disconnected)"
+  },
+  "custom/spotify": {
+    "format": "{icon} {}",
+    "return-type": "json",
+    "format-icons": {
+      "Playing": " ",
+      "Paused": " ",
+    },
+    "max-length": 80,
+    "exec": "playerctl -p spotify metadata --format '{\"text\": \"{{markup_escape(artist)}} - {{markup_escape(title)}}\", \"tooltip\": \"{{album}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
+    "on-click": "playerctl -p spotify play-pause",
+  },
+  "custom/gpu-usage": {
+    "exec": "cat /sys/class/hwmon/hwmon6/device/gpu_busy_percent",
+    "format": " {}%",
+    "return-type": "",
+    "interval": 3
+  },
+  "idle_inhibitor": {
+    "format": "{icon}",
+    "format-icons": {
+      "activated": "",
+      "deactivated": ""
     }
+  },
+  "hyprland/workspaces": {
+    "format": "{icon}",
+    "format-icons": {
+      "default": "",
+    },
+    "persistent-workspaces": {
+      "*": 10, // workspaces by default on every monitor
+    },
+  },
+  "disk": {
+    "format": " {}%",
+    "interval": 60,
+    "path": "/home",
+  },
+  "wlr/workspaces": {
+    "format": "{icon}",
+    "on-click": "activate",
+    "format-icons": {
+      "1": "",
+      "2": "",
+      "3": "",
+      "4": "",
+      "5": "",
+      "urgent": "",
+      "active": "",
+      "default": ""
+    },
+    "sort-by-number": true
+  },
+  "custom/dunst": {
+    "exec": "~/.config/waybar/scripts/dunst.sh",
+    "on-click": "dunstctl set-paused toggle",
+    "restart-interval": 1,
+  },
+  "privacy": {
+    "icon-spacing": 20,
+    "icon-size": 14,
+    "transition-duration": 250,
+    "modules": [
+      {
+        "type": "screenshare",
+        "tooltip": true,
+        "tooltip-icon-size": 16
+      },
+      {
+        "type": "audio-in",
+        "tooltip": true,
+        "tooltip-icon-size": 16
+      }
+    ]
+  },
+  "niri/workspaces": {
+  	"format": "{icon}",
+  	"format-icons": {
+  		// Named workspaces
+  		// (you need to configure them in niri)
+  		"browser": "",
+  		"discord": "",
+  		"chat": "<b></b>",
+
+  		// Icons by state
+  		"active": "",
+  		"default": ""
+  	}
+  },
 }
