--- a/.config/wluma/config.toml
+++ b/.config/wluma/config.toml
@@ -14,7 +14,7 @@ thresholds = { 0 = "night", 7 = "dark", 9 = "dim", 11 = "normal", 13 = "bright",
 [[output.backlight]]
 name = "eDP-1"
 path = "/sys/class/backlight/amdgpu_bl0"
-capturer = "wlroots"
+capturer = "wayland"
 
 # [[output.ddcutil]]
 # name = "Dell Inc. DELL P2415Q"
