--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -2,7 +2,12 @@
 command = "swww"
 arguments = ["img", "--transition-type", "center"]
 set = true
-# pre_hook = ""# ...
+# pre_hook = ""
+
+# [templates.ags]
+# input_path = 'templates/ags.json'
+# output_path = '~/.config/ags/util/colors.json'
+# post_hook = 'ags quit; ags run --gtk4'
 
 [templates.gtk3]
 input_path = 'templates/gtk-colors.css'
@@ -12,14 +17,14 @@ output_path = '~/.config/gtk-3.0/colors.css'
 input_path = 'templates/gtk-colors.css'
 output_path = '~/.config/gtk-4.0/colors.css'
 
-[templates.zed]
-input_path = 'templates/zed.json'
-output_path = '~/.config/zed/themes/material-you.json'
+# [templates.zed]
+# input_path = 'templates/zed.json'
+# output_path = '~/.config/zed/themes/material-you.json'
 
-[config.custom_colors]
-red = "#f38ba8"
-green = "#a6e3a1"
-yellow = "#f9e2af"
-blue = "#89b4fa"
-orange = "#fab387"
-purple = "#cba6f7"
+# [config.custom_colors]
+# red = "#f38ba8"
+# green = "#a6e3a1"
+# yellow = "#f9e2af"
+# blue = "#89b4fa"
+# orange = "#fab387"
+# purple = "#cba6f7"
